k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-ingress
  namespace: exam-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: exam.local
      http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /answer-service
            pathType: Prefix
            backend:
              service:
                name: answer-service
                port:
                  number: 8083
          - path: /exam-service
            pathType: Prefix
            backend:
              service:
                name: exam-service
                port:
                  number: 8082
          - path: /course-service
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 8081
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
